# sospd

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.txt  Makefile  README  README.md  add-noise  add-noise.cpp  gen-random.cpp  higher-order-experiment.cpp  recover-crash.cpp  submodular-flow.cpp  submodular-flow.hpp  to-do.txt
doc/: Doxyfile
experiments/: CMakeLists.txt
experiments/binary-denoising/: CMakeLists.txt  binary-add-noise.cpp  binary-denoise.cpp  binary-to-opengm.cpp  binary-train.cpp
experiments/denoising/: CMakeLists.txt  Makefile  add-noise.cpp  convergence-all.sh  convergence-stats.py  convergence-test.sh  denoise.cpp  energy-graph.gp  foe-cliques.cpp  foe-cliques.hpp  image.cpp  image.hpp  make-graphs.sh  medium-test.pgm  run-all.sh  run-test.sh  test-graph.gp  test-graphs.sh
experiments/example/: CMakeLists.txt  higher-order-experiment.cpp
experiments/optical-flow/: CMakeLists.txt  flow.cpp
experiments/scripts/: FoE-fusion.sh  FoE-lp.sh  FoE.sh  cell-tracking.sh  fix-stereo.sh  geo-surf-3.sh  geo-surf-7.sh  process-results.py  protein-prediction.sh  stereo.sh
experiments/stereo/: CMakeLists.txt  Makefile  disparity-diff.cpp  energy-graph.gp  make-graphs.sh  opengm-to-stereo.cpp  report-stats.sh  run-all.sh  stereo-to-opengm.cpp  stereo.cpp
include/: alpha-expansion.hpp  clique.hpp  dgfm.hpp  energy-common.hpp  flow-solver.hpp  fusion-move.hpp  gen-random.hpp  generic-higher-order.hpp  higher-order-energy.hpp  multilabel-energy.hpp  parametric-submodular-ibfs.hpp  sos-graph.hpp  sospd.hpp  spd1.hpp  submodular-flow.hpp  submodular-functions.hpp  submodular-ibfs.hpp
scripts/: classify-all.sh  classify-grabcut.sh  learn-all.sh  learn-cross-validate.sh  learn-grabcut.sh  learn.sh  random-split.sh  scale-data.sh
src/: alpha-expansion.cpp  bidirectional-ibfs.cpp  dgfm.cpp  gen-random.cpp  ibfs.h  parametric-ibfs.cpp  sospd.cpp  source-ibfs.cpp  submodular-flow.cpp  submodular-functions.cpp  submodular-ibfs.cpp
submodular-flow/: Makefile  alpha-expansion.cpp  alpha-expansion.hpp  clique.hpp  denoise_test.cpp  dgfm.cpp  dgfm.hpp  gen-random.cpp  gen-random.hpp  ibfs.cpp  ibfs.h  ibfs_test.cpp  sos-common.hpp  sos_ibfs_test.cpp  spd1.cpp  spd1.hpp  spd2.cpp  spd2.hpp  spd2_double.cpp  spd2_double.hpp  submodular-flow.cpp  submodular-flow.hpp  submodular-functions.cpp  submodular-functions.hpp  submodular-ibfs.cpp  submodular-ibfs.hpp  submodular_test.cpp  test  test.cpp
svm-sos/: CMakeLists.txt  Makefile  binary_seg_app.cpp  binary_seg_app.hpp  cluster-color-feature.hpp  color-patch-feature.hpp  color-patch-multi-feature.hpp  contrast-submodular-multi.hpp  contrast-submodular.hpp  crf.hpp  distance-feature.hpp  feature.cpp  feature.hpp  feature_train.cpp  gmm-feature.hpp  gmm.cpp  gmm.hpp  image_manip.hpp  init_stats.cpp  interactive_seg_app.cpp  interactive_seg_app.hpp  pairwise-feature.hpp  potts-feature.hpp  process_stats.cpp  semantic_seg_app.cpp  semantic_seg_app.hpp  sqrt-submodular-feature.hpp  stats.cpp  stats.hpp  svm_c++.cpp  svm_c++.hpp  svm_feature.hpp  svm_struct_api.cpp  svm_struct_api.h  svm_struct_api_types.h  svm_struct_learn_custom.cpp  svm_struct_options.cpp  svm_struct_options.hpp
svm-sos/binary_seg/: binary-submodular-feature.hpp  binary-unary-feature.hpp  binary_seg_app.cpp  binary_seg_app.hpp
svm-sos/features/: ale-feature.hpp  color-patch-feature.hpp  submodular-feature.hpp
svm-sos/interactive_seg/: CMakeLists.txt  color-patch-feature.hpp  contrast-submodular.hpp  distance-feature.hpp  gmm-feature.hpp  gmm.cpp  gmm.hpp  interactive_seg.cpp  interactive_seg.hpp  pairwise-feature.hpp  submodular-feature.hpp
svm-sos/semantic_seg/: semantic_seg_app.cpp  semantic_seg_app.hpp
svm-sos/svm_c++/: CMakeLists.txt  crf.hpp  feature.cpp  feature.hpp  feature_train.cpp  image_manip.hpp  locked-persistent-archive-impl.hpp  serialize_unique_ptr.hpp  stats.cpp  stats.hpp  svm_c++.cpp  svm_c++.hpp  svm_struct_api.cpp  svm_struct_api.h  svm_struct_api_types.h  svm_struct_options.cpp  svm_struct_options.hpp
svm-sos/svm_c++/svm_light/: Makefile  svm_common.c  svm_learn.c  svm_learn.h
svm-sos/svm_c++/svm_struct/: Makefile  svm_struct_classify.c  svm_struct_common.c  svm_struct_common.h  svm_struct_learn.c  svm_struct_main.c
svm-sos/svm_light/: Makefile  svm_classify.c  svm_common.h  svm_hideo.c  svm_learn_main.c  svm_loqo.c
svm-sos/svm_struct/: Makefile  svm_struct_classify.c  svm_struct_learn.c  svm_struct_learn.h  svm_struct_main.c
svm-sos/util/: locked-persistent-archive.hpp
test/: CMakeLists.txt  test-higher-order-energy.cpp  test-main.cpp  test-submodular-flow.cpp  test-submodular-ibfs.cpp
